--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,10 @@ html {
 .card {
 	border-radius: 20px;
 	width: 350px;
-	height: 480px;
+	height: 100%;
 	border: rgb(183, 183, 183) solid 3px;
 	box-shadow: 17px 17px 14px -4px rgba(0, 0, 0, 0.1);
+	padding-bottom: 30px;
 }
 .card:hover {
 	margin-top: -15px;
@@ -149,9 +150,10 @@ html {
 .card-event {
 	border-radius: 20px;
 	width: 400px;
-	height: 380px;
+	height: 100%;
 	border: rgb(183, 183, 183) solid 3px;
 	box-shadow: 17px 17px 14px -4px rgba(0, 0, 0, 0.1);
+	padding-bottom: 30px;
 }
 
 .card-event img {
@@ -330,7 +332,7 @@ html {
 	}
 	/* akhir side bar */
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
 	.container {
 		margin: 0 20px;
 	}
